fix: word-break in record-text__question

--- a/web/src/style/_questions.scss
+++ b/web/src/style/_questions.scss
@@ -129,7 +129,7 @@
   &__question {
     margin: 0;
     padding: 10px 10px;
-
+    word-break: break-all;
     &__full {
       display: none;
     }
